Fix z-index issues in schema breadcrumb that conflict with site header suggest.

--- a/site/trunk/schema/schema.less.less
+++ b/site/trunk/schema/schema.less.less
@@ -121,7 +121,8 @@ Breadcrumbs
 }
 
 #breadcrumb-siblings {
-    z-index: 10;
+    display: none;
+    z-index: 1;
     width: 200px;
     background: #222;
     padding: 5px;
@@ -160,7 +161,7 @@ Breadcrumbs
 .breadcrumb-item-inner a {
     display: block;
     position: relative;
-    z-index: 11;
+    z-index: 2;
     padding: 4px 7px;
     color: #e4e6e7;
 }
